unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/CMPL123__Record_Access_Rule__c.object-meta.xml
<CustomObject>
    <label>Record Access Rule</label>
    <nameField>
        <label>Record Access Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Access Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>