unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/fields/CMPL123__Active_of_the_rule__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Active_of_the_rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>