unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/fields/CMPL123__Apex_Sharing_Reason__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Apex_Sharing_Reason__c</fullName>
        <inlineHelpText>Sharing Reason must be the same on target and child objects.  If the object has a namespace, append to the front.</inlineHelpText>
        <label>Apex Sharing Reason</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>