unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/fields/CMPL123__API_Path_to_User_Relationship__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__API_Path_to_User_Relationship__c</fullName>
        <label>API Path to User Relationship</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>