unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/fields/CMPL123__Child_Objects__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Child_Objects__c</fullName>
        <description>Descendants of Target Object</description>
        <inlineHelpText>Descendants of Target Object in JSON</inlineHelpText>
        <label>Child Objects</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>