unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/fields/CMPL123__Record_Access_Rule_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Record_Access_Rule_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Access Rule External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>