unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/fields/CMPL123__Target_Object__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Target_Object__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>