unpackaged/main/default/objects/CMPL123__Record_Access_Rule__c/fields/CMPL123__User_Field_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__User_Field_Name__c</fullName>
        <label>User Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>